Fix inline code content overflow

--- a/assets/scss/generic/_code.scss
+++ b/assets/scss/generic/_code.scss
@@ -32,6 +32,7 @@ pre {
   color: $color-primary;
   background: $color-secondary;
   border-radius: 5px;
+  white-space: pre-wrap;
 }
 
 .token {
